# agi_index_tournament

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: dataset.ipynb  pipeline.ipynb  read_dict_testing.ipynb
src/agi_index_tournament.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agi_toolkit/: DictRewriter.py
src/agi_toolkit/datasets/: MMLUMathTester.py  test_gsm8k.py
src/agi_toolkit/evaluators/: EQUATOREvaluator.py  MMEReasoningEvaluator.py  MMLUEvaluator.py  UnifiedEvaluator.py
